# kofic-box-office-mcp-py

./: .env.example  AGENTS.md  README.md  pyproject.toml
deploy/systemd/: kofic-box-office-mcp.service.example
scripts/: run_http.sh
src/kofic_box_office_mcp/: __init__.py  arko_event_constants.py  arko_event_gateway.py  arko_event_reference.py  arko_event_response_parser.py  arko_event_service.py  bootstrap.py  constants.py  exceptions.py  gateway.py  mcst_performance_constants.py  mcst_performance_gateway.py  mcst_performance_reference.py  mcst_performance_response_parser.py  mcst_performance_service.py  reference.py  response_parser.py  runtime.py  server.py  service.py  settings.py  validation.py
tests/: test_arko_event_response_parser.py  test_arko_event_service.py  test_bootstrap.py  test_mcst_performance_response_parser.py  test_mcst_performance_service.py  test_response_parser.py  test_runtime.py  test_service.py  test_settings.py
